[package]
name = "list-mod"
version = "0.1.1"
edition = "2021"
description = "A procedural macro for generating a list of string slices of the names of the modules inside a source code directory in the current project."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
